--- a/CoreApp102MVC/Views/_ViewImports.cshtml
+++ b/CoreApp102MVC/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
-﻿@using CoreApp102MVC
-@using CoreApp102MVC.Models
+﻿@using CoreApp102.Mvc
+@using CoreApp102.Mvc.Models
+@using CoreApp102.Mvc.DTOs
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
