--- a/CoreApp102MVC/Views/Product/Create.cshtml
+++ b/CoreApp102MVC/Views/Product/Create.cshtml
@@ -14,17 +14,17 @@
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Stock">Urun Ismi :</label>
+                <label asp-for="Stock">Urun Stogu :</label>
                 <input asp-for="Stock" class="form-control" />
                 <span asp-validation-for="Stock" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Price">Urun Ismi :</label>
+                <label asp-for="Price">Urun Fiyati :</label>
                 <input asp-for="Price" class="form-control" />
                 <span asp-validation-for="Price" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="CategoryId">Urun Ismi :</label>
+                <label asp-for="CategoryId">Kategori :</label>
                 <input asp-for="CategoryId" class="form-control" />
                 <span asp-validation-for="CategoryId" class="text-danger"></span>
             </div>
